--- a/app/client/src/locales/ast.json
+++ b/app/client/src/locales/ast.json
@@ -99,7 +99,7 @@
   "Login with LastFM": "Aniciar sesión en LastFM",
   "Disconnect LastFM": "Desconectase de LastFM",
   "Requires restart to apply!": "¡Rique'l reaniciu p'aplicar!",
-  "Enable Discord Rich Presence, requires restart to toggle!": "Activa la presencia arriquecida de de Discord. ¡Rique reaniciar l'aplicación p'alternar!",
+  "Enable Discord Rich Presence, requires restart to toggle!": "Activa la presencia arriquecida de Discord. ¡Rique reaniciar l'aplicación p'alternar!",
   "Discord Rich Presence": "Presencia arriquecida de Discord",
   "Enable Discord join button for syncing tracks, requires restart to toggle!": "Activa'l botón de xunión de Discord pa sincronizar pistes. ¡Rique reaniciar l'aplicación p'alternar!",
   "Discord Join Button": "Botón de xunión de Discord",
@@ -154,13 +154,13 @@
   "Keep sidebar open": "Caltener la barra llateral abierta",
   "WARNING: Might require reload to work properly!": "ALVERTENCIA: ¡Reanicia l'aplicación pa que funcione afayadizamente!",
   "An error occured, URL might be invalid or unsupported.": "Asocedió un fallu, quiciabes la URL nun seya válida o nun se sofite.",
-  "Top tracks": "Top tracks",
-  "Show all top tracks": "Show all top tracks",
+  "Top tracks": "Pistes destacaes",
+  "Show all top tracks": "Amosar toles pistes destacaes",
   "Singles": "Singles",
-  "Album:": "Album:",
-  "Artists:": "Artists:",
-  "Yes": "Yes",
-  "No": "No",
-  "Download Filename": "Download Filename",
-  "Language": "Language"
+  "Album:": "Álbum:",
+  "Artists:": "Artistes:",
+  "Yes": "Sí",
+  "No": "Non",
+  "Download Filename": "Nome de les descargues",
+  "Language": "Llingua"
 }
