--- a/app/client/src/locales/de.json
+++ b/app/client/src/locales/de.json
@@ -27,7 +27,7 @@
   "Sort by": "Sortieren nach",
   "Date Added": "Hinzugefügt am",
   "Name (A-Z)": "Name (A-Z)",
-  "Artist (A-Z)": "Künstler*in (A-Z)",
+  "Artist (A-Z)": "Künstler*innen (A-Z)",
   "Album (A-Z)": "Album (A-Z)",
   "Error loading lyrics or lyrics not found!": "Fehler beim Laden der Songtexte bzw. Songtexte nicht gefunden!",
   "Create playlist": "Playlist erstellen",
@@ -154,13 +154,13 @@
   "Keep sidebar open": "Sidebar offen lassen",
   "WARNING: Might require reload to work properly!": "WARNUNG: Eventuell muss neu geladen werden, um richtig zu funktionieren!",
   "An error occured, URL might be invalid or unsupported.": "Ein Fehler ist aufgetreten, die URL ist ungültig oder wird nicht unterstützt.",
-  "Top tracks": "Top tracks",
-  "Show all top tracks": "Show all top tracks",
+  "Top tracks": "Top-Titel",
+  "Show all top tracks": "Zeige alle Top-Titel",
   "Singles": "Singles",
   "Album:": "Album:",
-  "Artists:": "Artists:",
-  "Yes": "Yes",
-  "No": "No",
-  "Download Filename": "Download Filename",
-  "Language": "Language"
+  "Artists:": "Künstler*innen:",
+  "Yes": "Ja",
+  "No": "Nein",
+  "Download Filename": "Dateiname herunterladen",
+  "Language": "Sprache"
 }
