--- a/app/client/src/locales/el.json
+++ b/app/client/src/locales/el.json
@@ -4,7 +4,7 @@
   "Library": "Βιβλιοθήκη",
   "Tracks": "Κομμάτια",
   "Playlists": "Λίστες αναπαραγωγής",
-  "Albums": "Album",
+  "Albums": "Άλμπουμ",
   "Artists": "Καλλιτέχνες",
   "More": "Περισσότερα",
   "Settings": "Ρυθμίσεις",
@@ -28,7 +28,7 @@
   "Date Added": "Ημερομηνία Προσθήκης",
   "Name (A-Z)": "Όνομα (Α-Ω)",
   "Artist (A-Z)": "Καλλιτέχνης (Α-Ω)",
-  "Album (A-Z)": "Album (Α-Ω)",
+  "Album (A-Z)": "Άλμπουμ (Α-Ω)",
   "Error loading lyrics or lyrics not found!": "Σφάλμα κατά τη φόρτωση στίχων ή αδυναμία εύρεσης στίχων!",
   "Create playlist": "Δημιουργία λίστας αναπαραγωγής",
   "Create": "Δημιουργία",
@@ -45,10 +45,10 @@
   "Duration": "Διάρκεια",
   "Released": "Κυκλοφόρησε",
   "Disk": "Δίσκος",
-  "albums": "album",
+  "albums": "άλμπουμ",
   "Play top": "Αναπαραγωγή κορυφαίου",
   "Radio": "Ραδιόφωνο",
-  "Show all albums": "Εμφάνιση όλων των album",
+  "Show all albums": "Εμφάνιση όλων των άλμπουμ",
   "Show all singles": "Εμφάνιση όλων των single",
   "Show more": "Εμφάνιση περισσότερων",
   "Downloaded": "Ελήφθησαν",
@@ -87,7 +87,7 @@
   "Always show download confirm dialog before downloading.": "Να εμφανίζεται πάντα το παράθυρο διαλόγου επιβεβαίωσης πριν από τη λήψη.",
   "Show download dialog": "Εμφάνιση παραθύρου διαλόγου επιβεβαίωσης",
   "Create folders for artists": "Δημιουργία φακέλου για καλλιτέχνη",
-  "Create folders for albums": "Δημιουργία φακέλων για album",
+  "Create folders for albums": "Δημιουργία φακέλων για άλμπουμ",
   "Download lyrics": "Λήψη στίχων",
   "Variables": "Μεταβλητές",
   "UI": "Περιβάλλον Χρήστη",
@@ -147,20 +147,20 @@
   "Edit playlist": "Επεξεργασία λίστας αναπαραγωγής",
   "Save": "Αποθήκευση",
   "Edit": "Επεξεργασία",
-  "Importer": "Importer",
-  "Enter URL": "Enter URL",
-  "Currently only Spotify is supported and limited to 100 tracks.": "Currently only Spotify is supported and limited to 100 tracks.",
-  "Import into playlist": "Import into playlist",
-  "Keep sidebar open": "Keep sidebar open",
-  "WARNING: Might require reload to work properly!": "WARNING: Might require reload to work properly!",
-  "An error occured, URL might be invalid or unsupported.": "An error occured, URL might be invalid or unsupported.",
-  "Top tracks": "Top tracks",
-  "Show all top tracks": "Show all top tracks",
-  "Singles": "Singles",
-  "Album:": "Album:",
-  "Artists:": "Artists:",
-  "Yes": "Yes",
-  "No": "No",
-  "Download Filename": "Download Filename",
-  "Language": "Language"
+  "Importer": "Εισαγωγέας",
+  "Enter URL": "Εισαγωγή URL",
+  "Currently only Spotify is supported and limited to 100 tracks.": "Επί του παρόντος, υποστηρίζεται μόνο το Spotify και περιορίζεται σε 100 κομμάτια.",
+  "Import into playlist": "Εισαγωγή στη λίστα αναπαραγωγής",
+  "Keep sidebar open": "Κρατήστε την πλαϊνή μπάρα ανοιχτή",
+  "WARNING: Might require reload to work properly!": "ΠΡΟΕΙΔΟΠΟΙΗΣΗ: Μπορεί να χρειαστεί επαναφόρτωση για να λειτουργήσει σωστά!",
+  "An error occured, URL might be invalid or unsupported.": "Παρουσιάστηκε σφάλμα, το URL ενδέχεται να μην είναι έγκυρο ή να μην υποστηρίζεται.",
+  "Top tracks": "Κορυφαία κομμάτια",
+  "Show all top tracks": "Εμφάνιση όλων των κορυφαίων κομματιών",
+  "Singles": "Σίνγκλ",
+  "Album:": "Άλμπουμ:",
+  "Artists:": "Καλλιτέχνες:",
+  "Yes": "Ναι",
+  "No": "Όχι",
+  "Download Filename": "Όνομα Αρχείου Λήψης",
+  "Language": "Γλώσσα"
 }
