--- a/app/client/src/locales/es.json
+++ b/app/client/src/locales/es.json
@@ -150,17 +150,17 @@
   "Importer": "Importador",
   "Enter URL": "Introducir URL",
   "Currently only Spotify is supported and limited to 100 tracks.": "Actualmente solo Spotify está soportado y limitado a 100 pistas.",
-  "Import into playlist": "Importar lista de reproducción",
+  "Import into playlist": "Importar a lista de reproducción",
   "Keep sidebar open": "Mantener barra lateral abierta",
   "WARNING: Might require reload to work properly!": "ADVERTENCIA: ¡Puede requerir recarga para trabajar correctamente!",
-  "An error occured, URL might be invalid or unsupported.": "Ocurrió un error, la URL es invalida o no es soportada.",
-  "Top tracks": "Top tracks",
-  "Show all top tracks": "Show all top tracks",
-  "Singles": "Singles",
-  "Album:": "Album:",
-  "Artists:": "Artists:",
-  "Yes": "Yes",
+  "An error occured, URL might be invalid or unsupported.": "Ocurrió un error, la URL puede ser inválida o no soportada.",
+  "Top tracks": "Mejores canciones",
+  "Show all top tracks": "Mostrar las mejores canciones",
+  "Singles": "Sencillos",
+  "Album:": "Álbum:",
+  "Artists:": "Artistas:",
+  "Yes": "Sí",
   "No": "No",
-  "Download Filename": "Download Filename",
-  "Language": "Language"
+  "Download Filename": "Nombre del archivo de descarga",
+  "Language": "Idioma"
 }
