--- a/app/client/src/locales/hu.json
+++ b/app/client/src/locales/hu.json
@@ -49,7 +49,7 @@
   "Play top": "Legfelső lejátszása",
   "Radio": "Rádió",
   "Show all albums": "Összes album megjelenítése",
-  "Show all singles": "Show all singles",
+  "Show all singles": "Összes dal megjelenítése",
   "Show more": "Több megjelenítése",
   "Downloaded": "Letöltött",
   "Queue": "Várólista",
@@ -75,7 +75,7 @@
   "ARL/Token": "ARL/Token",
   "Login": "Belépés",
   "By using this program, you disagree with Deezer's ToS.": "Szoftwerünk használatával elutasítja a Deezer általános felhasználási feltételeit.",
-  "Only in Electron version!": "Only in Electron version!",
+  "Only in Electron version!": "Csak teljes változatban elérhető!",
   "Search results for:": "Találatok:",
   "Error loading data!": "Hiba az adatok betöltése közben!",
   "Try again later!": "Kérjük próbálja meg később!",
@@ -108,7 +108,7 @@
   "Don't minimize to tray": "Ne tegye le a tálcára",
   "Close on exit": "Kilépés bezáráskor",
   "Settings saved!": "Beállítások elmentve!",
-  "Available only in Electron version!": "Available only in Electron version!",
+  "Available only in Electron version!": "Csak teljes változatban érhető el!",
   "Crossfade (ms)": "Átfedés (ms)",
   "Select primary color": "Elsődleges szín kiválasztása",
   "Light theme": "Világos kinézet",
@@ -154,13 +154,13 @@
   "Keep sidebar open": "Oldalsó sáv nyitva tartása",
   "WARNING: Might require reload to work properly!": "Figyelem: Lehetséges hogy újra kell indítani az alkalmazást ahhoz hogy tökéletesen működjön!",
   "An error occured, URL might be invalid or unsupported.": "Egy hiba történet: a megadott URL érvénytelen lehet vagy nem támogatott.",
-  "Top tracks": "Top tracks",
-  "Show all top tracks": "Show all top tracks",
-  "Singles": "Singles",
+  "Top tracks": "Legjobb dalok",
+  "Show all top tracks": "Mutasd az összes legjobb dalt",
+  "Singles": "Kislemezek",
   "Album:": "Album:",
-  "Artists:": "Artists:",
-  "Yes": "Yes",
-  "No": "No",
-  "Download Filename": "Download Filename",
-  "Language": "Language"
+  "Artists:": "Előadó:",
+  "Yes": "Igen",
+  "No": "Nem",
+  "Download Filename": "Letöltött fájlnév",
+  "Language": "Nyelv"
 }
