--- a/app/client/src/locales/id.json
+++ b/app/client/src/locales/id.json
@@ -138,29 +138,29 @@
   "Website": "Situs",
   "Visit website": "Kunjungi situs web",
   "New update available:": "Pembaruan tersedia:",
-  "Shuffle": "Shuffle",
-  "Download album cover": "Download album cover",
-  "Art Resolution": "Art Resolution",
-  "Public": "Public",
-  "Private": "Private",
-  "Collaborative": "Collaborative",
-  "Edit playlist": "Edit playlist",
-  "Save": "Save",
+  "Shuffle": "Putar acak",
+  "Download album cover": "Unduh cover album",
+  "Art Resolution": "Resolusi gambar",
+  "Public": "Publik",
+  "Private": "Pribadi",
+  "Collaborative": "Kolaboratif",
+  "Edit playlist": "Edit daftar putar",
+  "Save": "Simpan",
   "Edit": "Edit",
-  "Importer": "Importer",
-  "Enter URL": "Enter URL",
-  "Currently only Spotify is supported and limited to 100 tracks.": "Currently only Spotify is supported and limited to 100 tracks.",
-  "Import into playlist": "Import into playlist",
-  "Keep sidebar open": "Keep sidebar open",
-  "WARNING: Might require reload to work properly!": "WARNING: Might require reload to work properly!",
-  "An error occured, URL might be invalid or unsupported.": "An error occured, URL might be invalid or unsupported.",
-  "Top tracks": "Top tracks",
-  "Show all top tracks": "Show all top tracks",
-  "Singles": "Singles",
+  "Importer": "Telah di impor",
+  "Enter URL": "Masukkan URL",
+  "Currently only Spotify is supported and limited to 100 tracks.": "Saat ini hanya mendukung Spotify dan hanya terbatas 100 lagu.",
+  "Import into playlist": "Impor ke daftar putar",
+  "Keep sidebar open": "Biarkan sidebar tetap terbuka",
+  "WARNING: Might require reload to work properly!": "PERINGATAN: Mungkin perlu memuat ulang agar berfungsi dengan benar!",
+  "An error occured, URL might be invalid or unsupported.": "Terjadi kesalahan, URL mungkin tidak valid atau tidak didukung.",
+  "Top tracks": "Lagu teratas",
+  "Show all top tracks": "Tampilkan semua lagu teratas",
+  "Singles": "Single",
   "Album:": "Album:",
-  "Artists:": "Artists:",
-  "Yes": "Yes",
-  "No": "No",
-  "Download Filename": "Download Filename",
-  "Language": "Language"
+  "Artists:": "Artis:",
+  "Yes": "Iya",
+  "No": "Tidak",
+  "Download Filename": "Unduh Nama File",
+  "Language": "Bahasa"
 }
