--- a/app/client/src/locales/pt.json
+++ b/app/client/src/locales/pt.json
@@ -19,7 +19,7 @@
   "Estimated size:": "Tempo estimado:",
   "Start downloading": "Iniciar download",
   "Cancel": "Cancelar",
-  "Stream logging is disabled!": "O registro de depuração extra está desativado!",
+  "Stream logging is disabled!": "Registro de transmissão está desativado!",
   "Enable it in settings for history to work properly.": "Habilite nas configurações para que o histórico funcione corretamente.",
   "History": "Histórico",
   "Create new playlist": "Criar nova playlist",
@@ -41,12 +41,12 @@
   "Remove from playlist": "Remover da playlist",
   "Play track mix": "Reproduzir mix da faixa",
   "Go to": "Ir para",
-  "Track Mix": "Faixa Mix",
+  "Track Mix": "Mix da Faixa",
   "Duration": "Duração",
   "Released": "Lançamento",
   "Disk": "Disco",
   "albums": "álbuns",
-  "Play top": "Reproduzir no topo",
+  "Play top": "Reproduzir top",
   "Radio": "Rádio",
   "Show all albums": "Mostrar todos os álbuns",
   "Show all singles": "Mostrar todos os singles",
@@ -61,12 +61,12 @@
   "Playing from": "Reproduzindo de",
   "Info": "Informações",
   "Lyrics": "Letra",
-  "Track number": "Número de faixa",
-  "Disk number": "Numero de disco",
+  "Track number": "Número da faixa",
+  "Disk number": "Número do disco",
   "Explicit": "Explícito",
   "Source": "Fonte",
   "ID": "Identificação",
-  "Error logging in!": "Erro de login!",
+  "Error logging in!": "Erro no login!",
   "Please try again later, or try another account.": "Por favor, tente novamente mais tarde ou tente outra conta.",
   "Logout": "Desconectar",
   "Login using browser": "Login usando o navegador",
@@ -75,14 +75,14 @@
   "ARL/Token": "ARL/Token",
   "Login": "Login",
   "By using this program, you disagree with Deezer's ToS.": "Ao usar este programa, você discorda dos termos e condições de uso do Deezer.",
-  "Only in Electron version!": "Apenas na versão do Electron!",
+  "Only in Electron version!": "Somente na versão Electron!",
   "Search results for:": "Resultado de pesquisa para:",
   "Error loading data!": "Erro ao carregar dados!",
   "Try again later!": "Tente novamente mais tarde!",
   "Search": "Pesquisa",
-  "Streaming Quality": "Qualidade do streaming",
-  "Download Quality": "Qualiadade do download",
-  "Downloads Directory": "Pasta de Download",
+  "Streaming Quality": "Qualidade da Transmissão",
+  "Download Quality": "Qualidade do Download",
+  "Downloads Directory": "Diretório de Downloads",
   "Simultaneous downloads": "Downloads simultâneos",
   "Always show download confirm dialog before downloading.": "Sempre mostrar diálogo de confirmação de download antes de baixar.",
   "Show download dialog": "Mostrar diálogo de download",
@@ -90,7 +90,7 @@
   "Create folders for albums": "Criar pastas para álbuns",
   "Download lyrics": "Baixar letra",
   "Variables": "Variáveis",
-  "UI": "IU",
+  "UI": "Interface do Usuário",
   "Show autocomplete in search": "Mostrar autocompletar na pesquisa",
   "Integrations": "Integrações",
   "This allows listening history, flow and recommendations to work properly.": "Isto permite que o histórico de ouvidas, flow e recomendações funcionem corretamente.",
@@ -98,19 +98,19 @@
   "Connect your LastFM account to allow scrobbling.": "Conecte sua conta do LastFM para permitir o scrobbling.",
   "Login with LastFM": "Login com LastFM",
   "Disconnect LastFM": "Desconectar LastFM",
-  "Requires restart to apply!": "Requer reinicialização do aplicativo para aplicar!",
-  "Enable Discord Rich Presence, requires restart to toggle!": "Ativar o Rich Presence do Discord, requer reiniciar para alternar!",
+  "Requires restart to apply!": "Requer reinicialização para aplicar!",
+  "Enable Discord Rich Presence, requires restart to toggle!": "Ativar o Rich Presence do Discord, requer reinicialização para alternar!",
   "Discord Rich Presence": "Discord Rich Presence",
-  "Enable Discord join button for syncing tracks, requires restart to toggle!": "Ativar o botão de adesão do Discord para sincronizar faixas requer reinicialização para alternar!",
-  "Discord Join Button": "Botão de Entrada Discord",
+  "Enable Discord join button for syncing tracks, requires restart to toggle!": "Ativar o botão de entrar no Discord para sincronizar faixas, requer reinicialização para alternar!",
+  "Discord Join Button": "Botão de Entrar do Discord",
   "Other": "Outro",
   "Minimize to tray": "Minimizar para a bandeja",
   "Don't minimize to tray": "Não minimizar para a bandeja",
   "Close on exit": "Fechar ao sair",
   "Settings saved!": "Configurações salvas!",
-  "Available only in Electron version!": "Disponível apenas na versão completa!",
-  "Crossfade (ms)": "Transição suave (ms)",
-  "Select primary color": "Escolha a cor primária",
+  "Available only in Electron version!": "Disponível somente na versão Electron!",
+  "Crossfade (ms)": "Transição gradual (ms)",
+  "Select primary color": "Selecione a cor primária",
   "Light theme": "Tema Claro",
   "Create folders for playlists": "Criar pastas para playlists",
   "About": "Sobre",
@@ -148,19 +148,19 @@
   "Save": "Salvar",
   "Edit": "Editar",
   "Importer": "Importador",
-  "Enter URL": "Digite a URL",
+  "Enter URL": "Introduzir ARL",
   "Currently only Spotify is supported and limited to 100 tracks.": "Atualmente apenas o Spotify é suportado e limitado a 100 faixas.",
   "Import into playlist": "Importar para a playlist",
   "Keep sidebar open": "Manter a barra lateral aberta",
   "WARNING: Might require reload to work properly!": "AVISO: Pode ser necessário recarregar para funcionar corretamente!",
   "An error occured, URL might be invalid or unsupported.": "Ocorreu um erro, a URL pode ser inválida ou não suportada.",
-  "Top tracks": "Top tracks",
-  "Show all top tracks": "Show all top tracks",
+  "Top tracks": "Top faixas",
+  "Show all top tracks": "Mostrar todas as faixas",
   "Singles": "Singles",
-  "Album:": "Album:",
-  "Artists:": "Artists:",
-  "Yes": "Yes",
-  "No": "No",
-  "Download Filename": "Download Filename",
-  "Language": "Language"
+  "Album:": "Álbum:",
+  "Artists:": "Artistas:",
+  "Yes": "Sim",
+  "No": "Não",
+  "Download Filename": "Nomenclatura de download",
+  "Language": "Idioma"
 }
