--- a/app/client/src/locales/ru.json
+++ b/app/client/src/locales/ru.json
@@ -140,7 +140,7 @@
   "New update available:": "Доступна новая версия:",
   "Shuffle": "Перемешать",
   "Download album cover": "Загрузить обложку альбома",
-  "Art Resolution": "Разрешение",
+  "Art Resolution": "Разрешение обложки",
   "Public": "Публичный",
   "Private": "Приватный",
   "Collaborative": "Совместное",
@@ -154,13 +154,13 @@
   "Keep sidebar open": "Не закрывать боковое меню",
   "WARNING: Might require reload to work properly!": "Внимание! Может потребоваться перезапуск для правильной работы.",
   "An error occured, URL might be invalid or unsupported.": "Ошибка, URL недействителен или не поддерживается.",
-  "Top tracks": "Top tracks",
-  "Show all top tracks": "Show all top tracks",
-  "Singles": "Singles",
-  "Album:": "Album:",
-  "Artists:": "Artists:",
-  "Yes": "Yes",
-  "No": "No",
-  "Download Filename": "Download Filename",
-  "Language": "Language"
+  "Top tracks": "Популярные треки",
+  "Show all top tracks": "Показать все популярные треки",
+  "Singles": "Синглы",
+  "Album:": "Альбом:",
+  "Artists:": "Исполнители:",
+  "Yes": "Да",
+  "No": "Нет",
+  "Download Filename": "Скачать шаблон для названия",
+  "Language": "Язык"
 }
