--- a/app/client/src/locales/tr.json
+++ b/app/client/src/locales/tr.json
@@ -46,7 +46,7 @@
   "Released": "Yayınlandı",
   "Disk": "Disk",
   "albums": "albümler",
-  "Play top": "Play top",
+  "Play top": "Popüler olanları çal",
   "Radio": "Radyo",
   "Show all albums": "Tüm albümleri göster",
   "Show all singles": "Tüm şarkıları göster",
@@ -154,13 +154,13 @@
   "Keep sidebar open": "Kenar çubuğu açık kalsın",
   "WARNING: Might require reload to work properly!": "DİKKAT: Düzgün çalışması için yeniden yükleme gerekebilir!",
   "An error occured, URL might be invalid or unsupported.": "Bir hata oluştu, URL geçersiz veya desteklenmiyor olabilir.",
-  "Top tracks": "Top tracks",
-  "Show all top tracks": "Show all top tracks",
-  "Singles": "Singles",
-  "Album:": "Album:",
-  "Artists:": "Artists:",
-  "Yes": "Yes",
-  "No": "No",
-  "Download Filename": "Download Filename",
-  "Language": "Language"
+  "Top tracks": "Popüler şarkılar",
+  "Show all top tracks": "En çok dinlenenleri göster",
+  "Singles": "Single'lar",
+  "Album:": "Albümler:",
+  "Artists:": "Sanatçılar:",
+  "Yes": "Evet",
+  "No": "Hayır",
+  "Download Filename": "Adlandırma taslağı indir",
+  "Language": "Dil"
 }
