--- a/app/client/src/locales/uk.json
+++ b/app/client/src/locales/uk.json
@@ -140,27 +140,27 @@
   "New update available:": "Доступне оновлення:",
   "Shuffle": "Перемішати",
   "Download album cover": "Завантажити обкладинку альбому",
-  "Art Resolution": "Art Resolution",
+  "Art Resolution": "Розширення обкладинки",
   "Public": "Публічний",
   "Private": "Приватний",
-  "Collaborative": "Collaborative",
+  "Collaborative": "Спільний",
   "Edit playlist": "Редагувати плейлист",
   "Save": "Зберегти",
   "Edit": "Редагувати",
-  "Importer": "Importer",
-  "Enter URL": "Enter URL",
-  "Currently only Spotify is supported and limited to 100 tracks.": "Currently only Spotify is supported and limited to 100 tracks.",
-  "Import into playlist": "Import into playlist",
-  "Keep sidebar open": "Keep sidebar open",
-  "WARNING: Might require reload to work properly!": "WARNING: Might require reload to work properly!",
-  "An error occured, URL might be invalid or unsupported.": "An error occured, URL might be invalid or unsupported.",
-  "Top tracks": "Top tracks",
-  "Show all top tracks": "Show all top tracks",
+  "Importer": "Імпорт плейлистів",
+  "Enter URL": "Введіть посилання",
+  "Currently only Spotify is supported and limited to 100 tracks.": "Наразі підтримується тільки Spotify і з обмеженям в 100 треків.",
+  "Import into playlist": "Імпортувати в плейлист",
+  "Keep sidebar open": "Не закривати бокове меню",
+  "WARNING: Might require reload to work properly!": "УВАГА: Можливо потрібно перезапустити програму для коректної роботи!",
+  "An error occured, URL might be invalid or unsupported.": "Виникла помилка, можливо посилання є недійсним або не підтримується.",
+  "Top tracks": "Популярні треки",
+  "Show all top tracks": "Показати всі популярні треки",
   "Singles": "Singles",
-  "Album:": "Album:",
-  "Artists:": "Artists:",
-  "Yes": "Yes",
-  "No": "No",
+  "Album:": "Альбом:",
+  "Artists:": "Виконавці:",
+  "Yes": "Так",
+  "No": "Ні",
   "Download Filename": "Download Filename",
-  "Language": "Language"
+  "Language": "Мова"
 }
