--- a/app/client/src/locales/uwu.json
+++ b/app/client/src/locales/uwu.json
@@ -147,20 +147,20 @@
   "Edit playlist": "Edit pwaywist",
   "Save": "Save",
   "Edit": "Edit",
-  "Importer": "Importer",
-  "Enter URL": "Enter URL",
-  "Currently only Spotify is supported and limited to 100 tracks.": "Currently only Spotify is supported and limited to 100 tracks.",
-  "Import into playlist": "Import into playlist",
-  "Keep sidebar open": "Keep sidebar open",
-  "WARNING: Might require reload to work properly!": "WARNING: Might require reload to work properly!",
-  "An error occured, URL might be invalid or unsupported.": "An error occured, URL might be invalid or unsupported.",
-  "Top tracks": "Top tracks",
-  "Show all top tracks": "Show all top tracks",
-  "Singles": "Singles",
-  "Album:": "Album:",
-  "Artists:": "Artists:",
-  "Yes": "Yes",
-  "No": "No",
-  "Download Filename": "Download Filename",
-  "Language": "Language"
+  "Importer": "Impowtew",
+  "Enter URL": "Entew URL",
+  "Currently only Spotify is supported and limited to 100 tracks.": "C-Cuwwentwy onwy Spotify is suppowted and wimited t-to 100 twacks.",
+  "Import into playlist": "Impowt into pwaywist",
+  "Keep sidebar open": "Keep sidebaw open uwu",
+  "WARNING: Might require reload to work properly!": "WARNING: Might requiwe rewoad t-to wowk >,< !",
+  "An error occured, URL might be invalid or unsupported.": "An ewwow occuwed, URL m-might be invawid or unsuppowted.",
+  "Top tracks": "Top twacks",
+  "Show all top tracks": "Show aww t-top twacks",
+  "Singles": "Singwes",
+  "Album:": "Albuwm:",
+  "Artists:": "Awtists:",
+  "Yes": "Yes :>",
+  "No": "No :<",
+  "Download Filename": "Downwoad Filename",
+  "Language": "Wanguage (Don't change me >w<)"
 }
