--- a/app/client/src/locales/fa.json
+++ b/app/client/src/locales/fa.json
@@ -1,166 +1,166 @@
 {
-  "Home": "Home",
-  "Browse": "Browse",
-  "Library": "Library",
-  "Tracks": "Tracks",
-  "Playlists": "Playlists",
-  "Albums": "Albums",
-  "Artists": "Artists",
-  "More": "More",
-  "Settings": "Settings",
-  "Downloads": "Downloads",
-  "Search or paste Deezer URL. Use / to quickly focus.": "Search or paste Deezer URL. Use \"/\" to quickly focus.",
-  "Play": "Play",
-  "Add to library": "Add to library",
-  "Download": "Download",
-  "fans": "fans",
-  "tracks": "tracks",
-  "Quality": "Quality",
-  "Estimated size:": "Estimated size:",
-  "Start downloading": "Start downloading",
-  "Cancel": "Cancel",
-  "Stream logging is disabled!": "Stream logging is disabled!",
-  "Enable it in settings for history to work properly.": "Enable it in settings for history to work properly.",
-  "History": "History",
-  "Create new playlist": "Create new playlist",
-  "TRACKS": "TRACKS",
-  "Sort by": "Sort by",
-  "Date Added": "Date Added",
-  "Name (A-Z)": "Name (A-Z)",
-  "Artist (A-Z)": "Artist (A-Z)",
-  "Album (A-Z)": "Album (A-Z)",
-  "Error loading lyrics or lyrics not found!": "Error loading lyrics or lyrics not found!",
-  "Create playlist": "Create playlist",
-  "Create": "Create",
-  "Add to playlist": "Add to playlist",
-  "Create new": "Create new",
-  "Remove": "Remove",
-  "Play next": "Play next",
-  "Add to queue": "Add to queue",
-  "Remove from library": "Remove from library",
-  "Remove from playlist": "Remove from playlist",
-  "Play track mix": "Play track mix",
-  "Go to": "Go to",
-  "Track Mix": "Track Mix",
-  "Duration": "Duration",
-  "Released": "Released",
-  "Disk": "Disk",
-  "albums": "albums",
-  "Play top": "Play top",
-  "Radio": "Radio",
-  "Show all albums": "Show all albums",
-  "Show all singles": "Show all singles",
-  "Show more": "Show more",
-  "Downloaded": "Downloaded",
-  "Queue": "Queue",
-  "Total": "Total",
-  "Stop": "Stop",
-  "Start": "Start",
-  "Show folder": "Show folder",
-  "Clear queue": "Clear queue",
-  "Playing from": "Playing from",
-  "Info": "Info",
-  "Lyrics": "Lyrics",
-  "Track number": "Track number",
-  "Disk number": "Disk number",
-  "Explicit": "Explicit",
-  "Source": "Source",
-  "ID": "ID",
-  "Error logging in!": "Error logging in!",
-  "Please try again later, or try another account.": "Please try again later, or try another account.",
-  "Logout": "Logout",
-  "Login using browser": "Login using browser",
-  "Please login using your Deezer account:": "Please login using your Deezer account:",
-  "...or paste your ARL/Token below:": "...or paste your ARL/Token below:",
+  "Home": "صفحه اصلی",
+  "Browse": "مرور",
+  "Library": "مجموعه",
+  "Tracks": "قطعه ها",
+  "Playlists": "لیست های پخش",
+  "Albums": "آلبوم ها",
+  "Artists": "صاحب آثار",
+  "More": "ادامه",
+  "Settings": "تنظیمات",
+  "Downloads": "بارگیری ها",
+  "Search or paste Deezer URL. Use / to quickly focus.": "جست و جو یا وارد کردن لینک دیزر، برای دقت بیشتر از \"/\" استفاده کنید.",
+  "Play": "پخش",
+  "Add to library": "به مجموعه اضافه کن",
+  "Download": "بارگیری",
+  "fans": "طرفداران",
+  "tracks": "قطعه ها",
+  "Quality": "کیفیت",
+  "Estimated size:": "حجم محاسبه شده:",
+  "Start downloading": "آغاز بارگیری",
+  "Cancel": "لغو",
+  "Stream logging is disabled!": "ثبت جریان پخش غیر فعال شده است!",
+  "Enable it in settings for history to work properly.": "برای کارکرد مناسب تاریخچه از بخش تنظیمات فعال کنید.",
+  "History": "تاریخچه",
+  "Create new playlist": "ایجاد لیست پخش جدید",
+  "TRACKS": "قطعه ها",
+  "Sort by": "مرتب‌سازی براساس",
+  "Date Added": "تاریخ اضافه شده",
+  "Name (A-Z)": "نام (A - Z)",
+  "Artist (A-Z)": "صاحب آثار (A-Z)",
+  "Album (A-Z)": "آلبوم (A-Z)",
+  "Error loading lyrics or lyrics not found!": "مشکل در بارگیری اشعار یا یافت نشد!",
+  "Create playlist": "ایجاد لیست پخش",
+  "Create": "ایجاد",
+  "Add to playlist": "به لیست پخش اضافه کن",
+  "Create new": "ایجاد جدید",
+  "Remove": "حذف",
+  "Play next": "بعد از این پخش کن",
+  "Add to queue": "به صف انتظار اضافه کن",
+  "Remove from library": "حذف از مجموعه",
+  "Remove from playlist": "از لیست پخش حذف شود",
+  "Play track mix": "پخش ترکیبی قطعه",
+  "Go to": "برو به",
+  "Track Mix": "ترکیب قطعه",
+  "Duration": "مدت زمان",
+  "Released": "منتشر شده‌ها",
+  "Disk": "نوار",
+  "albums": "آلبوم ها",
+  "Play top": "پخش محبوب ترین",
+  "Radio": "رادیو",
+  "Show all albums": "همه ی آلبوم ها را نشان بده",
+  "Show all singles": "همه ی قطعات تکی را نشان بده",
+  "Show more": "بیشتر نشان بده",
+  "Downloaded": "بارگیری شد",
+  "Queue": "صف انتظار",
+  "Total": "مجموع",
+  "Stop": "توقف",
+  "Start": "شروع",
+  "Show folder": "نمایش پوشه",
+  "Clear queue": "تخلیه صف انتظار",
+  "Playing from": "پخش از",
+  "Info": "اطلاعات",
+  "Lyrics": "اشعار",
+  "Track number": "شماره قطعه",
+  "Disk number": "شماره ی دیسک",
+  "Explicit": "فحاشی",
+  "Source": "منبع",
+  "ID": "شناسه",
+  "Error logging in!": "مشکل در وارد شدن!",
+  "Please try again later, or try another account.": "لطفا بعدا امتحان کنید یا با اکانت دیگری وارد شوید.",
+  "Logout": "خروج از حساب",
+  "Login using browser": "وارد شدن توسط مرورگر",
+  "Please login using your Deezer account:": "لطفاً با حساب کاربری دیزر خود وارد شوید:",
+  "...or paste your ARL/Token below:": "...یا با استفاده از ARL/Token پایین:",
   "ARL/Token": "ARL/Token",
-  "Login": "Login",
-  "By using this program, you disagree with Deezer's ToS.": "By using this program, you disagree with Deezer's ToS.",
-  "Only in Electron version!": "Only in Electron version!",
-  "Search results for:": "Search results for:",
-  "Error loading data!": "Error loading data!",
-  "Try again later!": "Try again later!",
-  "Search": "Search",
-  "Streaming Quality": "Streaming Quality",
-  "Download Quality": "Download Quality",
-  "Downloads Directory": "Downloads Directory",
-  "Simultaneous downloads": "Simultaneous downloads",
-  "Always show download confirm dialog before downloading.": "Always show download confirm dialog before downloading.",
-  "Show download dialog": "Show download dialog",
-  "Create folders for artists": "Create folders for artists",
-  "Create folders for albums": "Create folders for albums",
-  "Download lyrics": "Download lyrics",
-  "Variables": "Variables",
-  "UI": "UI",
-  "Show autocomplete in search": "Show autocomplete in search",
-  "Integrations": "Integrations",
-  "This allows listening history, flow and recommendations to work properly.": "This allows listening history, flow and recommendations to work properly.",
-  "Log track listens to Deezer": "Log track listens to Deezer",
-  "Connect your LastFM account to allow scrobbling.": "Connect your LastFM account to allow scrobbling.",
-  "Login with LastFM": "Login with LastFM",
-  "Disconnect LastFM": "Disconnect LastFM",
-  "Requires restart to apply!": "Requires restart to apply!",
-  "Enable Discord Rich Presence, requires restart to toggle!": "Enable Discord Rich Presence, requires restart to toggle!",
-  "Discord Rich Presence": "Discord Rich Presence",
-  "Enable Discord join button for syncing tracks, requires restart to toggle!": "Enable Discord join button for syncing tracks, requires restart to toggle!",
-  "Discord Join Button": "Discord Join Button",
-  "Other": "Other",
-  "Minimize to tray": "Minimize to tray",
-  "Don't minimize to tray": "Don't minimize to tray",
-  "Close on exit": "Close on exit",
-  "Settings saved!": "Settings saved!",
-  "Available only in Electron version!": "Available only in Electron version!",
-  "Crossfade (ms)": "Crossfade (ms)",
-  "Select primary color": "Select primary color",
-  "Light theme": "Light theme",
-  "Create folders for playlists": "Create folders for playlists",
-  "About": "About",
-  "Links:": "Links:",
-  "Telegram Releases": "Telegram Releases",
-  "Telegram Group": "Telegram Group",
-  "Discord": "Discord",
-  "Telegram Android Group": "Telegram Android Group",
-  "Credits:": "Credits:",
-  "Agree": "Agree",
-  "Dismiss": "Dismiss",
-  "Added to playlist!": "Added to playlist!",
-  "Added to library!": "Added to library!",
-  "Removed from library!": "Removed from library!",
-  "Removed from playlist!": "Removed from playlist!",
-  "Playlist deleted!": "Playlist deleted!",
-  "Delete": "Delete",
-  "Are you sure you want to delete this playlist?": "Are you sure you want to delete this playlist?",
-  "Force white tray icon": "Force white tray icon",
-  "Force default (white) tray icon if theme incorrectly detected. Requires restart.": "Force default (white) tray icon if theme incorrectly detected. Requires restart.",
-  "Share": "Share",
-  "Settings quality": "Settings quality",
-  "Content language": "Content language",
-  "Content country": "Content country",
-  "Website": "Website",
-  "Visit website": "Visit website",
-  "New update available:": "New update available:",
-  "Shuffle": "Shuffle",
-  "Download album cover": "Download album cover",
-  "Art Resolution": "Art Resolution",
-  "Public": "Public",
-  "Private": "Private",
-  "Collaborative": "Collaborative",
-  "Edit playlist": "Edit playlist",
-  "Save": "Save",
-  "Edit": "Edit",
-  "Importer": "Importer",
-  "Enter URL": "Enter URL",
-  "Currently only Spotify is supported and limited to 100 tracks.": "Currently only Spotify is supported and limited to 100 tracks.",
-  "Import into playlist": "Import into playlist",
-  "Keep sidebar open": "Keep sidebar open",
-  "WARNING: Might require reload to work properly!": "WARNING: Might require reload to work properly!",
-  "An error occured, URL might be invalid or unsupported.": "An error occured, URL might be invalid or unsupported.",
-  "Top tracks": "Top tracks",
-  "Show all top tracks": "Show all top tracks",
-  "Singles": "Singles",
-  "Album:": "Album:",
-  "Artists:": "Artists:",
-  "Yes": "Yes",
-  "No": "No",
-  "Download Filename": "Download Filename",
-  "Language": "Language"
+  "Login": "وارد شدن",
+  "By using this program, you disagree with Deezer's ToS.": "با استفاده از این برنامه، شما قوانین دیزر را زیر پا میگذارید.",
+  "Only in Electron version!": "فقط در نسخه ی الکترون!",
+  "Search results for:": "نتایج جستجو برای:",
+  "Error loading data!": "مشکل در بالا آوردن اطلاعات!",
+  "Try again later!": "بعداً دوباره تلاش کنید!",
+  "Search": "جست‌وجو",
+  "Streaming Quality": "کیفیت پخش",
+  "Download Quality": "کیفیت بارگیری",
+  "Downloads Directory": "مسیر بارگیری",
+  "Simultaneous downloads": "بارگیری همزمان",
+  "Always show download confirm dialog before downloading.": "همیشه پیام تایید بارگیری قبل از بارگیری را نشان بده.",
+  "Show download dialog": "نمایش پنجره ی بارگیری",
+  "Create folders for artists": "برای صاحب آثار پوشه بساز",
+  "Create folders for albums": "برای آلبوم ها پوشه بساز",
+  "Download lyrics": "بارگیری اشعار",
+  "Variables": "متغیرها",
+  "UI": "واسطه کاربری",
+  "Show autocomplete in search": "حدس کلمه در جست و جو",
+  "Integrations": "یکپارچه سازی ها",
+  "This allows listening history, flow and recommendations to work properly.": "این کمک میکند که تاریخچه، جریان و پیشنهادات پخش به درستی کار کند.",
+  "Log track listens to Deezer": "بارگذاری پخش شده ها به دیزر",
+  "Connect your LastFM account to allow scrobbling.": "برای اسکراب کردن قطعه ها به اکانت لست اف ام متصل شوید.",
+  "Login with LastFM": "وارد شدن به حساب لست اف ام",
+  "Disconnect LastFM": "خارج شدن از حساب لست اف ام",
+  "Requires restart to apply!": "برای اعمال تغییرات اجرای دوباره برنامه نیاز است!",
+  "Enable Discord Rich Presence, requires restart to toggle!": "فعال کردن همسان سازی با دیسکورد، نیازمند اجرای دوباره!",
+  "Discord Rich Presence": "همسان سازی با دیسکورد",
+  "Enable Discord join button for syncing tracks, requires restart to toggle!": "دکمه وارد شدن به دیسکورد را برای همسان سازی قطعه ها فعال کن، اجرای دوباره نیازمند است!",
+  "Discord Join Button": "دکمه وارد شدن به دیسکورد",
+  "Other": "ديگر",
+  "Minimize to tray": "کوچک کردن به Tray",
+  "Don't minimize to tray": "کوچک نکردن به Tray",
+  "Close on exit": "بستن و خروج",
+  "Settings saved!": "تنظیمات ذخیره شد!",
+  "Available only in Electron version!": "فقط در نسخه ی الکترون موجود است!",
+  "Crossfade (ms)": "پخش بعدی قبل از اتمام فعلی (میلی ثانیه)",
+  "Select primary color": "رنگ اصلی را انتخاب کنید",
+  "Light theme": "پوسته روشن",
+  "Create folders for playlists": "برای لیست پخش پوشه بساز",
+  "About": "درباره",
+  "Links:": "پیوند‌ها:",
+  "Telegram Releases": "عریضه های تلگرامی",
+  "Telegram Group": "گروه تلگرامی",
+  "Discord": "دیسکورد",
+  "Telegram Android Group": "گروه تلگرامی اندرویید",
+  "Credits:": "سازندگان:",
+  "Agree": "پذیرش",
+  "Dismiss": "رد",
+  "Added to playlist!": "به لیست پخش اضافه شد!",
+  "Added to library!": "به مجموعه اضافه شد!",
+  "Removed from library!": "از مجموعه حذف شد!",
+  "Removed from playlist!": "از لیست پخش حذف شد!",
+  "Playlist deleted!": "لیست پخش حذف شد!",
+  "Delete": "حذف",
+  "Are you sure you want to delete this playlist?": "مطمئنید که می خواهید این لیست پخش را حذف کنید?",
+  "Force white tray icon": "اجبار نمایش آیکون روشن در tray",
+  "Force default (white) tray icon if theme incorrectly detected. Requires restart.": "اجبار آیکون پیشفرض (روشن) در tray زمانی که پوسته اشتباه به نمایش درآمد، نیازمند اجرای دوباره.",
+  "Share": "اشتراک",
+  "Settings quality": "تنظیمات پیشفرض",
+  "Content language": "زبان محتوی",
+  "Content country": "کشور محتوی",
+  "Website": "وب سایت",
+  "Visit website": "بازدید از وبگاه",
+  "New update available:": "به روز رسانی جدید در دسترس است:",
+  "Shuffle": "پخش تصادفی",
+  "Download album cover": "دانلود تصویر آلبوم",
+  "Art Resolution": "وضوح تصویر",
+  "Public": "عمومی",
+  "Private": "خصوصی",
+  "Collaborative": "چند همکاری",
+  "Edit playlist": "ویرایش لیست پخش",
+  "Save": "ذخیره",
+  "Edit": "ویرایش",
+  "Importer": "وارد کننده",
+  "Enter URL": "وارد کردن لینک",
+  "Currently only Spotify is supported and limited to 100 tracks.": "در حال حاظر فقط اسپاتیفای با محدودیت 100 قطعه ساپورت میشود.",
+  "Import into playlist": "وارد کردن به لیست پخش",
+  "Keep sidebar open": "نوار کناری را باز نگه دار",
+  "WARNING: Might require reload to work properly!": "اخطار: برای کارکرد مناسب نیازمند ریستارت است!",
+  "An error occured, URL might be invalid or unsupported.": "خطا رخ داد، لینک وارد شده اشتباه است یا پشتیبانی نمیشود.",
+  "Top tracks": "ترانه های برتر",
+  "Show all top tracks": "نمایش همه ترانه های برتر",
+  "Singles": "تکی ها",
+  "Album:": "آلبوم:",
+  "Artists:": "صاحب آثار:",
+  "Yes": "بله",
+  "No": "نه",
+  "Download Filename": "بارگیری اسم فایل",
+  "Language": "زبان"
 }
