--- a/app/client/src/locales/nl.json
+++ b/app/client/src/locales/nl.json
@@ -1,166 +1,166 @@
 {
   "Home": "Home",
-  "Browse": "Browse",
-  "Library": "Library",
-  "Tracks": "Tracks",
-  "Playlists": "Playlists",
+  "Browse": "Bladeren",
+  "Library": "Bibliotheek",
+  "Tracks": "Nummers",
+  "Playlists": "Afspeellijsten",
   "Albums": "Albums",
-  "Artists": "Artists",
-  "More": "More",
-  "Settings": "Settings",
+  "Artists": "Artiesten",
+  "More": "Meer",
+  "Settings": "Instellingen",
   "Downloads": "Downloads",
-  "Search or paste Deezer URL. Use / to quickly focus.": "Search or paste Deezer URL. Use \"/\" to quickly focus.",
-  "Play": "Play",
-  "Add to library": "Add to library",
-  "Download": "Download",
+  "Search or paste Deezer URL. Use / to quickly focus.": "Zoek of plak Deezer URL. Gebruik \"/\" om snel te focussen.",
+  "Play": "Afspelen",
+  "Add to library": "Aan bibliotheek toevoegen",
+  "Download": "Downloaden",
   "fans": "fans",
-  "tracks": "tracks",
-  "Quality": "Quality",
-  "Estimated size:": "Estimated size:",
-  "Start downloading": "Start downloading",
-  "Cancel": "Cancel",
-  "Stream logging is disabled!": "Stream logging is disabled!",
-  "Enable it in settings for history to work properly.": "Enable it in settings for history to work properly.",
-  "History": "History",
-  "Create new playlist": "Create new playlist",
-  "TRACKS": "TRACKS",
-  "Sort by": "Sort by",
-  "Date Added": "Date Added",
-  "Name (A-Z)": "Name (A-Z)",
-  "Artist (A-Z)": "Artist (A-Z)",
+  "tracks": "nummers",
+  "Quality": "Kwaliteit",
+  "Estimated size:": "Geschatte grootte:",
+  "Start downloading": "Downloaden starten",
+  "Cancel": "Annuleren",
+  "Stream logging is disabled!": "Stream logboek is uitgeschakeld!",
+  "Enable it in settings for history to work properly.": "Schakel het in bij instellingen om de geschiedenis correct te laten werken.",
+  "History": "Geschiedenis",
+  "Create new playlist": "Nieuwe afspeellijst aanmaken",
+  "TRACKS": "NUMMERS",
+  "Sort by": "Sorteren op",
+  "Date Added": "Datum Toegevoegd",
+  "Name (A-Z)": "Naam (A-Z)",
+  "Artist (A-Z)": "Artiest (A-Z)",
   "Album (A-Z)": "Album (A-Z)",
-  "Error loading lyrics or lyrics not found!": "Error loading lyrics or lyrics not found!",
-  "Create playlist": "Create playlist",
-  "Create": "Create",
-  "Add to playlist": "Add to playlist",
-  "Create new": "Create new",
-  "Remove": "Remove",
-  "Play next": "Play next",
-  "Add to queue": "Add to queue",
-  "Remove from library": "Remove from library",
-  "Remove from playlist": "Remove from playlist",
-  "Play track mix": "Play track mix",
-  "Go to": "Go to",
-  "Track Mix": "Track Mix",
-  "Duration": "Duration",
-  "Released": "Released",
-  "Disk": "Disk",
+  "Error loading lyrics or lyrics not found!": "Fout bij het laden van songteksten of songteksten niet gevonden!",
+  "Create playlist": "Afspeellijst aanmaken",
+  "Create": "Aanmaken",
+  "Add to playlist": "Aan afspeellijst toevoegen",
+  "Create new": "Nieuw aanmaken",
+  "Remove": "Verwijderen",
+  "Play next": "Volgende afspelen",
+  "Add to queue": "Aan wachtrij toevoegen",
+  "Remove from library": "Uit bibliotheek verwijderen",
+  "Remove from playlist": "Uit afspeellijst verwijderen",
+  "Play track mix": "Speel nummer mix",
+  "Go to": "Ga naar",
+  "Track Mix": "Nummer Mix",
+  "Duration": "Tijdsduur",
+  "Released": "Gepubliceerd",
+  "Disk": "Schijf",
   "albums": "albums",
-  "Play top": "Play top",
+  "Play top": "Bovenaan afspelen",
   "Radio": "Radio",
-  "Show all albums": "Show all albums",
-  "Show all singles": "Show all singles",
-  "Show more": "Show more",
-  "Downloaded": "Downloaded",
-  "Queue": "Queue",
-  "Total": "Total",
-  "Stop": "Stop",
-  "Start": "Start",
-  "Show folder": "Show folder",
-  "Clear queue": "Clear queue",
-  "Playing from": "Playing from",
-  "Info": "Info",
-  "Lyrics": "Lyrics",
-  "Track number": "Track number",
-  "Disk number": "Disk number",
-  "Explicit": "Explicit",
-  "Source": "Source",
+  "Show all albums": "Alle albums tonen",
+  "Show all singles": "Alle singles weergeven",
+  "Show more": "Meer tonen",
+  "Downloaded": "Gedownload",
+  "Queue": "Wachtrij",
+  "Total": "Totaal",
+  "Stop": "Stoppen",
+  "Start": "Starten",
+  "Show folder": "Map weergeven",
+  "Clear queue": "Wachtrij wissen",
+  "Playing from": "Afspelen van",
+  "Info": "Informatie",
+  "Lyrics": "Songteksten",
+  "Track number": "Liednummer",
+  "Disk number": "Schijfnummer",
+  "Explicit": "Expliciet",
+  "Source": "Bron",
   "ID": "ID",
-  "Error logging in!": "Error logging in!",
-  "Please try again later, or try another account.": "Please try again later, or try another account.",
-  "Logout": "Logout",
-  "Login using browser": "Login using browser",
-  "Please login using your Deezer account:": "Please login using your Deezer account:",
-  "...or paste your ARL/Token below:": "...or paste your ARL/Token below:",
+  "Error logging in!": "Fout bij aanmelden!",
+  "Please try again later, or try another account.": "Probeer het later opnieuw of probeer een andere account.",
+  "Logout": "Afmelden",
+  "Login using browser": "Aanmelden via browser",
+  "Please login using your Deezer account:": "Log in met je Deezer account:",
+  "...or paste your ARL/Token below:": "...of plak je ARL/Token hieronder:",
   "ARL/Token": "ARL/Token",
-  "Login": "Login",
-  "By using this program, you disagree with Deezer's ToS.": "By using this program, you disagree with Deezer's ToS.",
-  "Only in Electron version!": "Only in Electron version!",
-  "Search results for:": "Search results for:",
-  "Error loading data!": "Error loading data!",
-  "Try again later!": "Try again later!",
-  "Search": "Search",
-  "Streaming Quality": "Streaming Quality",
-  "Download Quality": "Download Quality",
-  "Downloads Directory": "Downloads Directory",
-  "Simultaneous downloads": "Simultaneous downloads",
-  "Always show download confirm dialog before downloading.": "Always show download confirm dialog before downloading.",
-  "Show download dialog": "Show download dialog",
-  "Create folders for artists": "Create folders for artists",
-  "Create folders for albums": "Create folders for albums",
-  "Download lyrics": "Download lyrics",
-  "Variables": "Variables",
-  "UI": "UI",
-  "Show autocomplete in search": "Show autocomplete in search",
-  "Integrations": "Integrations",
-  "This allows listening history, flow and recommendations to work properly.": "This allows listening history, flow and recommendations to work properly.",
-  "Log track listens to Deezer": "Log track listens to Deezer",
-  "Connect your LastFM account to allow scrobbling.": "Connect your LastFM account to allow scrobbling.",
-  "Login with LastFM": "Login with LastFM",
-  "Disconnect LastFM": "Disconnect LastFM",
-  "Requires restart to apply!": "Requires restart to apply!",
-  "Enable Discord Rich Presence, requires restart to toggle!": "Enable Discord Rich Presence, requires restart to toggle!",
+  "Login": "Aanmelden",
+  "By using this program, you disagree with Deezer's ToS.": "Door dit programma te gebruiken, ben je het niet eens met Deezer's ToS.",
+  "Only in Electron version!": "Alleen in de Electron-versie!",
+  "Search results for:": "Zoekresultaten voor:",
+  "Error loading data!": "Fout bij laden van gegevens!",
+  "Try again later!": "Probeer het later opnieuw!",
+  "Search": "Zoeken",
+  "Streaming Quality": "Stream Kwaliteit",
+  "Download Quality": "Download Kwaliteit",
+  "Downloads Directory": "Download map",
+  "Simultaneous downloads": "Gelijktijdige downloads",
+  "Always show download confirm dialog before downloading.": "Toon altijd het download bevestigingsvenster voordat je downloadt.",
+  "Show download dialog": "Downloadvenster tonen",
+  "Create folders for artists": "Mappen voor artiest aanmaken",
+  "Create folders for albums": "Mappen voor albums aanmaken",
+  "Download lyrics": "Songteksten downloaden",
+  "Variables": "Variabelen",
+  "UI": "Gebruikersinterface",
+  "Show autocomplete in search": "Automatisch aanvullen weergeven bij zoeken",
+  "Integrations": "Integraties",
+  "This allows listening history, flow and recommendations to work properly.": "Dit zorgt ervoor dat je luistergeschiedenis, flow and aanbevelingen correct werken.",
+  "Log track listens to Deezer": "Log geluisterde nummers naar Deezer",
+  "Connect your LastFM account to allow scrobbling.": "Koppel je LastFM account om scrobbling toe te staan.",
+  "Login with LastFM": "Aanmelden bij LastFM",
+  "Disconnect LastFM": "Afbreken van LastFM-connectie",
+  "Requires restart to apply!": "Vereist herstart om toe te passen!",
+  "Enable Discord Rich Presence, requires restart to toggle!": "Schakel Discord Rich Presence in, herstart vereist om het in te schakelen!",
   "Discord Rich Presence": "Discord Rich Presence",
-  "Enable Discord join button for syncing tracks, requires restart to toggle!": "Enable Discord join button for syncing tracks, requires restart to toggle!",
-  "Discord Join Button": "Discord Join Button",
-  "Other": "Other",
-  "Minimize to tray": "Minimize to tray",
-  "Don't minimize to tray": "Don't minimize to tray",
-  "Close on exit": "Close on exit",
-  "Settings saved!": "Settings saved!",
-  "Available only in Electron version!": "Available only in Electron version!",
+  "Enable Discord join button for syncing tracks, requires restart to toggle!": "Schakel Discord-join knop in voor het synchroniseren van nummers, herstart vereist om het in te schakelen!",
+  "Discord Join Button": "Discord Join Knop",
+  "Other": "Overig",
+  "Minimize to tray": "Minimaliseer naar systeemvak",
+  "Don't minimize to tray": "Niet minimaliseren naar systeemvak",
+  "Close on exit": "Sluiten bij afsluiten",
+  "Settings saved!": "Instellingen opgeslagen!",
+  "Available only in Electron version!": "Alleen beschikbaar in de Electron versie!",
   "Crossfade (ms)": "Crossfade (ms)",
-  "Select primary color": "Select primary color",
-  "Light theme": "Light theme",
-  "Create folders for playlists": "Create folders for playlists",
-  "About": "About",
+  "Select primary color": "Selecteer primaire kleur",
+  "Light theme": "Lichte thema",
+  "Create folders for playlists": "Mappen voor afspeellijsten maken",
+  "About": "Over",
   "Links:": "Links:",
   "Telegram Releases": "Telegram Releases",
-  "Telegram Group": "Telegram Group",
+  "Telegram Group": "Telegram Groep",
   "Discord": "Discord",
-  "Telegram Android Group": "Telegram Android Group",
-  "Credits:": "Credits:",
-  "Agree": "Agree",
-  "Dismiss": "Dismiss",
-  "Added to playlist!": "Added to playlist!",
-  "Added to library!": "Added to library!",
-  "Removed from library!": "Removed from library!",
-  "Removed from playlist!": "Removed from playlist!",
-  "Playlist deleted!": "Playlist deleted!",
-  "Delete": "Delete",
-  "Are you sure you want to delete this playlist?": "Are you sure you want to delete this playlist?",
-  "Force white tray icon": "Force white tray icon",
-  "Force default (white) tray icon if theme incorrectly detected. Requires restart.": "Force default (white) tray icon if theme incorrectly detected. Requires restart.",
-  "Share": "Share",
-  "Settings quality": "Settings quality",
-  "Content language": "Content language",
-  "Content country": "Content country",
+  "Telegram Android Group": "Telegram Android Groep",
+  "Credits:": "Met dank aan:",
+  "Agree": "Akkoord gaan",
+  "Dismiss": "Negeren",
+  "Added to playlist!": "Aan afspeellijst toegevoegd!",
+  "Added to library!": "Aan bibliotheek toegevoegd!",
+  "Removed from library!": "Uit de bibliotheek verwijderd!",
+  "Removed from playlist!": "Uit afspeellijst verwijderd!",
+  "Playlist deleted!": "Afspeellijst verwijderd!",
+  "Delete": "Verwijderen",
+  "Are you sure you want to delete this playlist?": "Weet je zeker dat je deze afspeellijst wil verwijderen?",
+  "Force white tray icon": "Forceer wit systeemvak icoon",
+  "Force default (white) tray icon if theme incorrectly detected. Requires restart.": "Forceer standaard (wit) pictogram in het systeemvak als thema onjuist gedetecteerd wordt. Herstart vereist.",
+  "Share": "Delen",
+  "Settings quality": "Kwaliteit instellingen",
+  "Content language": "Taal van inhoud",
+  "Content country": "Land van inhoud",
   "Website": "Website",
-  "Visit website": "Visit website",
-  "New update available:": "New update available:",
+  "Visit website": "Website bezoeken",
+  "New update available:": "Nieuwe update beschikbaar:",
   "Shuffle": "Shuffle",
-  "Download album cover": "Download album cover",
-  "Art Resolution": "Art Resolution",
-  "Public": "Public",
-  "Private": "Private",
-  "Collaborative": "Collaborative",
-  "Edit playlist": "Edit playlist",
-  "Save": "Save",
-  "Edit": "Edit",
-  "Importer": "Importer",
-  "Enter URL": "Enter URL",
-  "Currently only Spotify is supported and limited to 100 tracks.": "Currently only Spotify is supported and limited to 100 tracks.",
-  "Import into playlist": "Import into playlist",
-  "Keep sidebar open": "Keep sidebar open",
-  "WARNING: Might require reload to work properly!": "WARNING: Might require reload to work properly!",
-  "An error occured, URL might be invalid or unsupported.": "An error occured, URL might be invalid or unsupported.",
-  "Top tracks": "Top tracks",
-  "Show all top tracks": "Show all top tracks",
+  "Download album cover": "Albumhoes downloaden",
+  "Art Resolution": "Illustratie resolutie",
+  "Public": "Openbaar",
+  "Private": "Privé",
+  "Collaborative": "Samenwerkend",
+  "Edit playlist": "Afspeellijst bewerken",
+  "Save": "Opslaan",
+  "Edit": "Bewerken",
+  "Importer": "Importeerder",
+  "Enter URL": "URL invoeren",
+  "Currently only Spotify is supported and limited to 100 tracks.": "Momenteel wordt alleen Spotify ondersteund; deze is beperkt tot 100 nummers.",
+  "Import into playlist": "In afspeellijst importeren",
+  "Keep sidebar open": "Zijbalk open laten",
+  "WARNING: Might require reload to work properly!": "WAARSCHUWING: Herladen mogelijk vereist om correct te werken!",
+  "An error occured, URL might be invalid or unsupported.": "Er is een fout opgetreden, URL kan ongeldig zijn of wordt niet ondersteund.",
+  "Top tracks": "Top nummers",
+  "Show all top tracks": "Alle topnummers weergeven",
   "Singles": "Singles",
   "Album:": "Album:",
-  "Artists:": "Artists:",
-  "Yes": "Yes",
-  "No": "No",
-  "Download Filename": "Download Filename",
-  "Language": "Language"
+  "Artists:": "Artiesten:",
+  "Yes": "Ja",
+  "No": "Nee",
+  "Download Filename": "Bestandsnaam Downloaden",
+  "Language": "Taal"
 }
